[package]
name = "ndm"
version = "0.9.0"
authors = ["Ben Stern <bstern@kukaret.com>"]
edition = "2018"
description = "Parse standard polyhedral dice notation"
repository = "https://github.com/therealbstern/ndm"
license = "MIT/Apache-2.0"

[dependencies]
rand = "0.8"
regex = "1.4"
lazy_static = "1.4"
